update: `_header` — fixed the z-index

--- a/src/assets/scss/modules/_header.scss
+++ b/src/assets/scss/modules/_header.scss
@@ -4,7 +4,6 @@
   isolation: isolate;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   max-height: 50em;
   flex-direction: column;
   background-color: var(--clr-background);
@@ -45,6 +44,7 @@
 
   &-svg {
     &_bottom {
+      z-index: -1;
       position: absolute;
       bottom: 0;
       left: 0;
